--- a/src/component/DaysForecast/DaysForecast.css
+++ b/src/component/DaysForecast/DaysForecast.css
@@ -1,5 +1,5 @@
 .forecast-weather-wrapper {
-	grid-area: forecast-weather;
+	/* grid-area: forecast-weather; */
 }
 
 .forecast-list {
