--- a/src/component/TodayHighlights/TodayHighlights.css
+++ b/src/component/TodayHighlights/TodayHighlights.css
@@ -1,12 +1,14 @@
 .highlight-weather-wrapper {
-	grid-area: current-highlight;
+	/* grid-area: current-highlight; */
 }
 
 .highlight-weather-card-body {
 	grid-template-areas:
-		"quality-index quality-index sunrise-sunset sunrise-sunset"
-		"visibility feels humudity pressure";
-	grid-template-columns: repeat(4, 1fr);
+		"quality-index quality-index"
+		"sunrise-sunset sunrise-sunset"
+		"visibility feels"
+		"humudity pressure";
+	grid-template-columns: repeat(2, 1fr);
 	gap: 3rem;
 }
 
@@ -23,13 +25,20 @@
 	grid-area: pressure;
 }
 
-@media screen and (max-width: 63em) {
+@media screen and (min-width: 90em) {
 	.highlight-weather-card-body {
 		grid-template-areas:
-			"quality-index quality-index"
-			"sunrise-sunset sunrise-sunset"
-			"visibility feels"
-			"humudity pressure";
-		grid-template-columns: repeat(2, 1fr);
+			"quality-index quality-index sunrise-sunset sunrise-sunset"
+			"visibility feels humudity pressure";
+		grid-template-columns: repeat(4, 1fr);
+	}
+}
+@media screen and (min-width: 120em) {
+	.highlight-weather-card-body {
+		grid-template-areas:
+			"quality-index quality-index quality-index quality-index"
+			"sunrise-sunset sunrise-sunset sunrise-sunset sunrise-sunset"
+			"visibility feels humudity pressure";
+		grid-template-columns: repeat(4, 1fr);
 	}
 }
