--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,21 @@ html:focus-within {
 	scroll-behavior: smooth;
 }
 
+/* scrollbar */
+::-webkit-scrollbar {
+	width: 18px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: var(--color-neutral-500);
+}
+
+::-webkit-scrollbar-thumb {
+	border: 4px solid var(--color-neutral-500);
+	border-radius: 9999px;
+	background-color: var(--color-neutral-400);
+}
+
 /* Set core body defaults */
 body {
 	min-height: 100vh;
